--- a/requirements.txt
+++ b/requirements.txt
@@ -27,12 +27,15 @@ pycodestyle==2.3.1
 pyflakes==1.6.0
 pylint==1.9.2
 python-docx==0.8.6
+python-dotenv==0.9.1
 requests==2.19.1
 rerun==1.0.28
 rope==0.10.7
 rsa==3.4.2
 singledispatch==3.4.0.3
 six==1.11.0
+slackclient==1.2.1
 uritemplate==3.0.0
 urllib3==1.23
+websocket-client==0.53.0
 wrapt==1.10.11
